<resources>
    <string name="app_name">TheKey</string>
    <string name="input_passw">Введите пароль</string>
    <string name="input_login">введите логин</string>
    <string name="input_descr">введите описание</string>
    <string name="add_note">Добавить запись</string>
    <string name="apply">Сохранить</string>
    <string name="new_file_name">Введите имя нового файла</string>
    <string name="new_file_name_empty">Введите имя файла</string>
    <string name="no_permissions">Недостаточно разрешений</string>
    <string name="add_storage">Добавить хранилище</string>
    <string name="gen_passw">Сгенерировать пароль</string>
    <string name="passw_len">Длина пароля</string>
    <string name="passw_len_parram">Длина пароля: %d</string>
    <string name="include_en">Буквы в пароле</string>
    <string name="include_spec_symbols">Cпец. символы</string>
    <string name="generate">Сгенерировать</string>
    <string name="generate_passw">Сгенерировать новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="passw_copied">Пароль скопирован</string>
    <string name="passw_facorite">Пароль отмечен</string>
    <string name="hist">История</string>
    <string name="bt_save">Сохранить</string>
    <string name="login">Войти</string>
    <string name="select_storage">Выбрать хранилище</string>
    <string name="storage_label">Хранилище:</string>
    <string name="to_provider">Найти вручную</string>
    <string name="search_storage">Поиск</string>
    <string name="storages">Хранилища</string>
    <string name="storage_create">Создать хранилище</string>
    <string name="create">Создать</string>
    <string name="storage_path">Путь к хранилищу</string>
    <string name="storage_name">Имя хранилища</string>
    <string name="storage_description">Описание</string>
    <string name="accounts">Аккаунты</string>
    <string name="generation">Генерация</string>
    <string name="clean">Очистить</string>
    <string name="account">Аккаунт</string>
    <string name="site">Сайт</string>
    <string name="login_name">Логин</string>
    <string name="passw">Пароль</string>
    <string name="about_storage">О хранилище</string>
    <string name="err_input_path">Введите путь к файлу</string>
    <string name="tkey_format">.ckey</string>
    <string name="cancel">Отмена</string>
    <string name="err_exist_file">Такой файл уже существует</string>
    <string name="err_create_storage">Ошибка создания хранилища</string>
    <string name="err_change_storage">Ошибка изменения хранилища</string>
    <string name="err_copy_storage">Ошибка копирования хранилища</string>
    <string name="success_create_storage">Хралище успешно создано</string>
    <string name="success_change_storage">Хралище успешно изменено</string>
    <string name="success_copy_storage">Хралище успешно скопировано</string>
    <string name="popup_share">Поделиться</string>
    <string name="popup_delete">Удалить</string>
    <string name="storages_empty_list">Нет хранилищ на устройстве</string>
    <string name="popup_details">Подробнее</string>
    <string name="popup_move">Переместить</string>
    <string name="popup_copy">Скопировать</string>
    <string name="popup_change">Изменить</string>
    <string name="storage_details">Подробнее</string>
    <string name="storage_change_move">Изменить, переместить</string>
    <string name="storage_copy">Скопировать хранилище</string>
    <string name="share_storage">Поделиться  хранилщем</string>
    <string name="last_update_param">Последнее обновление %s</string>
    <string name="gen_date">Сгенерирован %s</string>
    <string name="change_storage">Изменить хранилище</string>
    <string name="change_passw">Сменить пароль</string>
    <string name="approve_permissions">Предоставьте разрешения</string>
    <string name="login_error">Ошибка входа</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="del_note_title">Удалить запись</string>
    <string name="del_note_message">Вы точно хотите удалить запись безвозвратно</string>
    <string name="del_storage_title">Удалить хранилище</string>
    <string name="del_storage_message">Вы уверены, что хотите удалить безвозвратно хранилище паролей</string>
</resources>