<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/popup_details"
        android:title="@string/popup_details"
        android:visible="true" />

    <item
        android:id="@+id/popup_share"
        android:title="@string/popup_share"
        android:visible="true" />

    <item
        android:id="@+id/popup_change"
        android:title="@string/popup_change"
        android:visible="true" />

    <item
        android:id="@+id/popup_copy"
        android:title="@string/popup_copy"
        android:visible="true" />


    <item
        android:id="@+id/popup_delete"
        android:title="@string/popup_delete"
        android:visible="true" />
</menu>