<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_passw_container"
        style="@style/AppTheme.TextInputLayout.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/input_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_passw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_storage_name"
        style="@style/AppTheme.TextView.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/storage_label"
        app:layout_constraintLeft_toLeftOf="@id/tf_passw_container"
        app:layout_constraintTop_toBottomOf="@id/tf_passw_container" />

    <TextView
        android:id="@+id/tv_storage"
        style="@style/AppTheme.TextView.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toRightOf="@id/tv_storage_name"
        app:layout_constraintRight_toRightOf="@id/tf_passw_container"
        app:layout_constraintTop_toBottomOf="@id/tv_storage_name"
        tools:text="{appdata}/thekey.theket" />


    <ProgressBar
        android:id="@+id/pr_loging_processing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_passw_container"
        app:layout_constraintVertical_bias="0.3"
        tools:visibility="visible" />

    <Button
        android:id="@+id/bt_change_storage"
        style="@style/AppTheme.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/screen_margin"
        android:layout_marginRight="@dimen/screen_margin"
        android:text="@string/select_storage"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/bt_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/bt_login"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_margin"
        android:text="@string/login"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>